gitignore modifié pour prendre en compte ISE

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,59 @@
 cours/
 Julien/
 rattrapages/
-*/*/*/bin/
-*/*/*/build/bin/
-*/*/*/build/CMakeCache.txt
-*/*/*/build/CMakeFiles/
+bin/
+CMakeCache.txt
+CMakeFiles/
 be/fh_1A/others/
-*/*/Spice/*
-*/*/tex/*-genere.tex
+
+Spice/
+
+*-genere.tex
+
+*.exe
+
+*.bgn
+*.bit
+*.xwbt
+*.bld
+*.cmd_log
+*.drc
+*.html
+*.nc
+*.lso
+*.lst
+*.map
+*.mrp
+*.ncd
+*.ngc
+*.ngd
+*.ngr
+*.ngm
+*.pad
+*.par
+*.pcf
+*.prf
+*.prj
+*.ptwx
+*.stx
+*.syr
+*.twr
+*.twx
+*.unroutes
+*.ut
+*.xml
+*.xmsgs
+*.xpi
+*.xst
+*.xrpt
+*.wdb
+*.gise
+*.xise
+xilinxsim.ini
+isim/
+iseconfig/
+ipcore_dir/
+_ngo/
+xlnx_auto_0_xdb/
+xst/
+
