encore des gitignores pour ISE

--- a/.gitignore
+++ b/.gitignore
@@ -12,13 +12,21 @@ Spice/
 
 *.exe
 
+
+# ISE…
+
 *.bgn
 *.bit
 *.xwbt
 *.bld
+*.cmd
 *.cmd_log
 *.drc
+*.edif
 *.html
+*.ibs
+*.jhd
+*.jou
 *.nc
 *.lso
 *.lst
@@ -29,24 +37,37 @@ Spice/
 *.ngd
 *.ngr
 *.ngm
+*.nlf
 *.pad
 *.par
 *.pcf
+*.pcs
 *.prf
 *.prj
+*.psg
 *.ptwx
+*.ppr
+*.pwr
+*.schbak
+*.schcmd
+*.sdf
 *.stx
+*.sym
 *.syr
 *.twr
 *.twx
 *.unroutes
 *.ut
+*.v
+*.vhf
 *.xml
 *.xmsgs
+*.xdl
 *.xpi
 *.xst
 *.xrpt
 *.wdb
+*.wpc
 *.gise
 *.xise
 xilinxsim.ini
